--- a/app/src/main/res/layout-sw680dp/supervisor_training.xml
+++ b/app/src/main/res/layout-sw680dp/supervisor_training.xml
@@ -19,7 +19,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.19999999"
+        app:layout_constraintVertical_bias="0.466"
         app:srcCompat="@drawable/character_blue_man_facility_manager"/>
 
     <ImageButton
@@ -130,27 +130,22 @@
         android:text="@string/supervisor_goal_4"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/supervisor_goal_3_img"
-        app:layout_constraintTop_toTopOf="@+id/supervisor_goal_3_img"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/supervisor_goal_3_img"
-        android:layout_marginLeft="24dp"
-        app:layout_constraintVertical_bias="0.509"/>
+        app:layout_constraintBottom_toTopOf="@+id/supervisor_goal_3_img"/>
 
     <TextView
         android:id="@+id/supervisor_goal4_txt"
         android:layout_width="222dp"
         android:layout_height="136dp"
-        android:layout_marginRight="24dp"
         android:background="@color/colorPrimary"
         android:padding="2dp"
         android:text="@string/supervisor_goal_3"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/supervisor_goal_4_img"
-        app:layout_constraintTop_toTopOf="@+id/supervisor_goal_4_img"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/supervisor_goal_4_img"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/supervisor_goal_4_img"
+        android:layout_marginRight="32dp"
+        app:layout_constraintRight_toRightOf="parent"/>
 </android.support.constraint.ConstraintLayout>
