--- a/app/src/main/res/layout-land/technician_training_6.xml
+++ b/app/src/main/res/layout-land/technician_training_6.xml
@@ -11,9 +11,9 @@
         android:id="@+id/nextBtn"
         android:layout_width="88dp"
         android:layout_height="88dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="16dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:scaleType="fitCenter"
         android:text="Next"
@@ -35,23 +35,24 @@
         android:layout_marginStart="16dp"/>
 
     <ImageView
-        android:id="@+id/technicianImg"
+        android:id="@+id/bgImg"
         android:layout_width="226dp"
         android:layout_height="268dp"
         android:layout_marginTop="0dp"
-        android:transitionName="technicianCharacter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        app:srcCompat="@drawable/a6_people_on_elevator"
+        app:srcCompat="@drawable/building_segment_residential"
         tools:layout_editor_absoluteX="330dp"
         tools:layout_editor_absoluteY="61dp"/>
 
     <TextView
-        android:id="@+id/technician_a6_btn1"
+        android:id="@+id/technician_a7_btn1"
         android:layout_width="136dp"
         android:layout_height="64dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
@@ -59,78 +60,47 @@
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/title"/>
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintRight_toLeftOf="@+id/bgImg"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.5"/>
 
     <TextView
-        android:id="@+id/technician_a6_btn3"
+        android:id="@+id/technician_a7_btn2"
         android:layout_width="136dp"
         android:layout_height="64dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/com_facebook_button_border_color_focused"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/technician_a6_btn2_txt"
+        android:textAlignment="center"
+        android:textColor="?android:attr/colorPrimaryDark"
         android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/technician_a7_btn1"
+        app:layout_constraintRight_toLeftOf="@+id/bgImg"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.5"/>
+
+    <TextView
+        android:id="@+id/technician_a7_btn3"
+        android:layout_width="136dp"
+        android:layout_height="64dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
         android:text="@string/technician_a6_btn3_txt"
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
+        android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.5"
-        android:layout_marginStart="16dp"/>
-
-    <TextView
-        android:id="@+id/technician_a6_btn2"
-        android:layout_width="136dp"
-        android:layout_height="64dp"
-        android:background="@color/com_facebook_button_border_color_focused"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:text="@string/technician_a6_btn2_txt"
-        android:textAlignment="center"
-        android:textColor="?android:attr/colorPrimaryDark"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toTopOf="@+id/technician_a6_btn1"
-        android:layout_marginTop="0dp"/>
-
-    <TextView
-        android:id="@+id/technician_a6_btn4"
-        android:layout_width="136dp"
-        android:layout_height="64dp"
-        android:background="@color/com_facebook_button_border_color_focused"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:text="@string/technician_a6_btn4_txt"
-        android:textAlignment="center"
-        android:textColor="?android:attr/colorPrimaryDark"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn2"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.5"
-        android:layout_marginEnd="16dp"/>
-
-    <TextView
-        android:id="@+id/popup_text"
-        android:layout_width="329dp"
-        android:layout_height="95dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@color/authui_colorAccent"
-        android:padding="6dp"
-        android:text="@string/technician_a6_popup1_txt"
-        android:textColor="@android:color/white"
-        android:textSize="12sp"
-        app:layout_constraintLeft_toRightOf="@+id/technician_a6_btn3"
-        app:layout_constraintRight_toLeftOf="@+id/technician_a6_btn4"
-        tools:layout_editor_absoluteX="125dp"
-        tools:layout_editor_absoluteY="231dp"/>
+        android:layout_marginTop="16dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@+id/technician_a7_btn2"
+        app:layout_constraintRight_toLeftOf="@+id/bgImg"
+        android:layout_marginRight="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
