--- a/app/src/main/res/layout-sw680dp/technician_training_6.xml
+++ b/app/src/main/res/layout-sw680dp/technician_training_6.xml
@@ -12,14 +12,14 @@
         android:layout_width="88dp"
         android:layout_height="88dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="32dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:scaleType="fitCenter"
         android:text="Next"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/equip_c_arrow_right"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="34dp"/>
 
     <TextView
         android:id="@+id/title"
@@ -34,15 +34,15 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <ImageView
-        android:id="@+id/technicianImg"
-        android:layout_width="463dp"
-        android:layout_height="573dp"
-        android:layout_marginTop="0dp"
-        android:transitionName="technicianCharacter"
+        android:id="@+id/bgImg"
+        android:layout_width="531dp"
+        android:layout_height="470dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:srcCompat="@drawable/a6_people_on_elevator"/>
+        app:srcCompat="@drawable/building_segment_residential"/>
 
     <TextView
         android:id="@+id/technician_a6_btn1"
@@ -58,13 +58,12 @@
         android:textColor="?android:attr/colorPrimaryDark"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="256dp"/>
+        android:layout_marginTop="128dp"/>
 
     <TextView
         android:id="@+id/technician_a6_btn3"
         android:layout_width="218dp"
         android:layout_height="64dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginStart="32dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
@@ -72,59 +71,26 @@
         android:text="@string/technician_a6_btn3_txt"
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0"/>
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn2"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
         android:id="@+id/technician_a6_btn2"
         android:layout_width="220dp"
         android:layout_height="60dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
         android:text="@string/technician_a6_btn2_txt"
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="256dp"/>
-
-    <TextView
-        android:id="@+id/technician_a6_btn4"
-        android:layout_width="220dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/com_facebook_button_border_color_focused"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:text="@string/technician_a6_btn4_txt"
-        android:textAlignment="center"
-        android:textColor="?android:attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn2"
-        app:layout_constraintVertical_bias="0.0"/>
-
-    <TextView
-        android:id="@+id/popup_text"
-        android:layout_width="480dp"
-        android:layout_height="125dp"
         android:layout_marginTop="32dp"
-        android:background="@color/authui_colorAccent"
-        android:padding="6dp"
-        android:text="@string/technician_a6_popup1_txt"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/technicianImg"
-        tools:layout_editor_absoluteX="241dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn1"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
