--- a/app/src/main/res/layout/technician_training_5.xml
+++ b/app/src/main/res/layout/technician_training_5.xml
@@ -35,14 +35,30 @@
         android:layout_marginStart="16dp"/>
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/technicianImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:transitionName="technicianCharacter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:srcCompat="@drawable/a6_people_on_elevator"/>
+
+    <TextView
+        android:id="@+id/popup_text"
+        android:layout_width="329dp"
+        android:layout_height="95dp"
+        android:background="@color/authui_colorAccent"
+        android:padding="6dp"
+        android:text="@string/technician_a6_popup1_txt"
+        android:textColor="@android:color/white"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn4"/>
 
     <TextView
         android:id="@+id/technician_a6_btn1"
@@ -92,26 +108,26 @@
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/technicianImg"
         android:layout_marginTop="200dp"/>
 
     <TextView
         android:id="@+id/technician_a6_btn4"
         android:layout_width="136dp"
         android:layout_height="64dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
         android:text="@string/technician_a6_btn4_txt"
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn2"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0"
-        android:layout_marginEnd="16dp"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn2"
+        app:layout_constraintVertical_bias="0.0"/>
 
 </android.support.constraint.ConstraintLayout>
