--- a/app/src/main/res/layout-land/technician_training_6.xml
+++ b/app/src/main/res/layout-land/technician_training_6.xml
@@ -13,7 +13,7 @@
         android:layout_height="88dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="8dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:scaleType="fitCenter"
         android:text="Next"
@@ -38,20 +38,18 @@
         android:id="@+id/bgImg"
         android:layout_width="226dp"
         android:layout_height="268dp"
-        android:layout_marginTop="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:srcCompat="@drawable/building_segment_residential"
-        tools:layout_editor_absoluteX="330dp"
-        tools:layout_editor_absoluteY="61dp"/>
+        />
 
     <TextView
         android:id="@+id/technician_a7_btn1"
         android:layout_width="136dp"
         android:layout_height="64dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
@@ -61,29 +59,24 @@
         android:textColor="?android:attr/colorPrimaryDark"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintRight_toLeftOf="@+id/bgImg"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.5"/>
+        />
 
     <TextView
         android:id="@+id/technician_a7_btn2"
         android:layout_width="136dp"
         android:layout_height="64dp"
-        android:layout_marginEnd="16dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:text="@string/technician_a6_btn2_txt"
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/technician_a7_btn1"
-        app:layout_constraintRight_toLeftOf="@+id/bgImg"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.5"/>
+        />
 
     <TextView
         android:id="@+id/technician_a7_btn3"
@@ -95,12 +88,53 @@
         android:text="@string/technician_a6_btn3_txt"
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="16dp"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintTop_toBottomOf="@+id/technician_a7_btn2"
-        app:layout_constraintRight_toLeftOf="@+id/bgImg"
-        android:layout_marginRight="8dp"/>
+        android:layout_marginStart="32dp"/>
+
+    <ImageView
+        android:id="@+id/technicianImg"
+        android:layout_width="0dp"
+        android:layout_height="151dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:transitionName="technicianCharacter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/bgImg"
+        app:layout_constraintRight_toLeftOf="@+id/nextBtn"
+        app:srcCompat="@drawable/character_blue_man_technician"
+        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/popin_container"
+        />
+
+    <FrameLayout
+        android:id="@+id/popin_container"
+        android:layout_width="0dp"
+        android:layout_height="140dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bgImg"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/bgImg"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bgImg"
+        app:layout_constraintVertical_bias="0.071">
+
+        <TextView
+            android:id="@+id/results"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:padding="6dp"
+            android:textColor="@android:color/white"/>
+
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
