--- a/app/src/main/res/layout-sw680dp/technician_training_6.xml
+++ b/app/src/main/res/layout-sw680dp/technician_training_6.xml
@@ -12,7 +12,7 @@
         android:layout_width="88dp"
         android:layout_height="88dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginRight="8dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:scaleType="fitCenter"
         android:text="Next"
@@ -73,14 +73,13 @@
         android:textColor="?android:attr/colorPrimaryDark"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn2"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="32dp"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
         android:id="@+id/technician_a6_btn2"
         android:layout_width="220dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="32dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
@@ -91,6 +90,45 @@
         app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn1"
         android:layout_marginLeft="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        android:layout_marginStart="32dp"/>
+
+    <ImageView
+        android:id="@+id/technicianImg"
+        android:layout_width="105dp"
+        android:layout_height="211dp"
+        android:layout_marginBottom="16dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:transitionName="technicianCharacter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:srcCompat="@drawable/character_blue_man_technician"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/bgImg"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn3"
+        app:layout_constraintHorizontal_bias="0.576"
+        app:layout_constraintVertical_bias="1.0"/>
+
+    <FrameLayout
+        android:id="@+id/popin_container"
+        android:layout_width="448dp"
+        android:layout_height="191dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintLeft_toRightOf="@+id/technician_a6_btn2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        >
+
+        <TextView
+            android:id="@+id/results"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:padding="6dp"
+            android:textColor="@android:color/white"/>
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
