--- a/app/src/main/res/layout/technician_training_6.xml
+++ b/app/src/main/res/layout/technician_training_6.xml
@@ -91,4 +91,43 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/technician_a7_btn1"/>
 
+    <ImageView
+        android:id="@+id/technicianImg"
+        android:layout_width="0dp"
+        android:layout_height="151dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:transitionName="technicianCharacter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@drawable/character_blue_man_technician"
+        app:layout_constraintRight_toLeftOf="@+id/technician_a7_btn1"
+        android:layout_marginRight="8dp"/>
+
+    <FrameLayout
+        android:id="@+id/popin_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bgImg"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bgImg"
+        android:layout_marginTop="32dp">
+
+        <TextView
+            android:id="@+id/results"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:padding="6dp"
+            android:textColor="@android:color/white"/>
+
+    </FrameLayout>
+
+
 </android.support.constraint.ConstraintLayout>
