--- a/app/src/main/res/layout-sw680dp/training_choice.xml
+++ b/app/src/main/res/layout-sw680dp/training_choice.xml
@@ -12,14 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:text="Supervisor"
+        android:textSize="18sp"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="@+id/supervisorImg"
         app:layout_constraintRight_toRightOf="@+id/supervisorImg"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="8dp"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -29,42 +30,47 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:text="Technician"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/technicianImg"
         app:layout_constraintRight_toRightOf="@+id/technicianImg"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
         android:id="@+id/supervisorImg"
-        android:layout_width="128dp"
-        android:layout_height="396dp"
+        android:layout_width="196dp"
+        android:layout_height="448dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="32dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:transitionName="supervisorCharacter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView3"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/character_blue_man_facility_manager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/character_blue_man_facility_manager"/>
 
     <ImageView
         android:id="@+id/technicianImg"
-        android:layout_width="112dp"
-        android:layout_height="396dp"
+        android:layout_width="216dp"
+        android:layout_height="448dp"
         android:layout_marginBottom="32dp"
         android:layout_marginLeft="32dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="32dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:transitionName="technicianCharacter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/character_blue_man_technician"/>
+        app:srcCompat="@drawable/character_blue_man_technician"
+        tools:layout_editor_absoluteX="84dp"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -73,8 +79,10 @@
         android:layout_marginBottom="32dp"
         android:layout_marginTop="8dp"
         android:text="@string/training_choice_title"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/supervisorImg"/>
+
 </android.support.constraint.ConstraintLayout>
