--- a/app/src/main/res/layout-sw680dp/technician_training_10.xml
+++ b/app/src/main/res/layout-sw680dp/technician_training_10.xml
@@ -51,23 +51,23 @@
         />
 
     <TextView
-        android:id="@+id/technician_11_txt1"
+        android:id="@+id/technician_a11_txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:background="@color/colorPrimaryDark"
         android:padding="6dp"
         android:text="@string/technician_a11_txt1"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView3"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginEnd="8dp"
         app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/technician_a11_txt2"/>
 
     <TextView
