--- a/app/src/main/res/layout-sw680dp/technician_training_6.xml
+++ b/app/src/main/res/layout-sw680dp/technician_training_6.xml
@@ -45,11 +45,12 @@
         app:srcCompat="@drawable/building_segment_residential"/>
 
     <TextView
-        android:id="@+id/technician_a6_btn1"
+        android:id="@+id/technician_a7_btn1"
         android:layout_width="220dp"
         android:layout_height="60dp"
         android:layout_marginLeft="32dp"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
@@ -57,11 +58,10 @@
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="128dp"/>
+        app:layout_constraintTop_toTopOf="@+id/popin_container"/>
 
     <TextView
-        android:id="@+id/technician_a6_btn3"
+        android:id="@+id/technician_a7_btn3"
         android:layout_width="218dp"
         android:layout_height="64dp"
         android:layout_marginStart="32dp"
@@ -71,26 +71,26 @@
         android:text="@string/technician_a6_btn3_txt"
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn2"
         android:layout_marginLeft="32dp"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/technician_a7_btn2"/>
 
     <TextView
-        android:id="@+id/technician_a6_btn2"
+        android:id="@+id/technician_a7_btn2"
         android:layout_width="220dp"
         android:layout_height="60dp"
+        android:layout_marginStart="32dp"
         android:background="@color/com_facebook_button_border_color_focused"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
         android:text="@string/technician_a6_btn2_txt"
         android:textAlignment="center"
         android:textColor="?android:attr/colorPrimaryDark"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/technician_a6_btn1"
         android:layout_marginLeft="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="32dp"/>
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/technician_a7_btn1"/>
 
     <ImageView
         android:id="@+id/technicianImg"
@@ -113,14 +113,16 @@
     <FrameLayout
         android:id="@+id/popin_container"
         android:layout_width="448dp"
-        android:layout_height="191dp"
+        android:layout_height="248dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="64dp"
+        app:layout_constraintBottom_toTopOf="@+id/bgImg"
         app:layout_constraintLeft_toRightOf="@+id/technician_a6_btn2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        >
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/results"
