--- a/app/src/main/res/layout/supervisor_training.xml
+++ b/app/src/main/res/layout/supervisor_training.xml
@@ -7,6 +7,21 @@
                                              android:background="@android:color/white"
                                              android:orientation="vertical">
 
+    <Button
+        android:id="@+id/nextBtn"
+        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="32dp"
+        android:layout_marginBottom="16dp"
+        android:drawableLeft="@drawable/com_facebook_button_like_icon_selected"
+        android:text="@string/submit_results"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <ImageView
         android:id="@+id/supervisorImg"
         android:layout_width="140dp"
@@ -22,21 +37,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.38"/>
-
-    <ImageButton
-        android:id="@+id/nextBtn"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
-        android:layout_marginBottom="17dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:scaleType="fitCenter"
-        android:text="Next"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/equip_c_arrow_right"/>
 
     <ImageView
         android:id="@+id/supervisor_goal_1_img"
@@ -85,23 +85,25 @@
     <TextView
         android:id="@+id/supervisor_goal1_txt"
         android:layout_width="153dp"
-        android:layout_height="94dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:background="?android:attr/colorPrimary"
         android:hapticFeedbackEnabled="false"
         android:padding="2dp"
         android:text="@string/supervisor_goal_1"
         android:textAlignment="textStart"
         android:textColor="@android:color/white"
+        android:textSize="12sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/supervisor_goal_1_img"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="0.652"
         app:layout_constraintLeft_toRightOf="@+id/supervisor_goal_1_img"
         app:layout_constraintRight_toRightOf="@+id/supervisorImg"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.487"/>
 
     <TextView
         android:id="@+id/supervisor_goal2_txt"
@@ -115,6 +117,7 @@
         android:padding="2dp"
         android:text="@string/supervisor_goal_2"
         android:textColor="@android:color/white"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/technicianImg"
         app:layout_constraintLeft_toRightOf="@+id/technicianImg"
         app:layout_constraintRight_toRightOf="parent"
@@ -131,6 +134,7 @@
         android:padding="2dp"
         android:text="@string/supervisor_goal_3"
         android:textColor="@android:color/white"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/supervisor_goal_4_img"
         app:layout_constraintRight_toRightOf="parent"/>
 
@@ -147,6 +151,7 @@
         android:padding="2dp"
         android:text="@string/supervisor_goal_4"
         android:textColor="@android:color/white"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/supervisor_goal_3_img"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
