More layout refinements
Signed-off-by: Chris Kelly <chris@thursby.com>

--- a/app/src/main/res/layout/technician_survey.xml
+++ b/app/src/main/res/layout/technician_survey.xml
@@ -165,6 +165,7 @@
                 android:id="@+id/q8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
                 android:text="@string/technician_quiz_8"/>
 
             <TextView
