--- a/app/src/main/res/layout-sw680dp/technician_training_5.xml
+++ b/app/src/main/res/layout-sw680dp/technician_training_5.xml
@@ -37,7 +37,6 @@
         android:id="@+id/technicianImg"
         android:layout_width="463dp"
         android:layout_height="573dp"
-        android:layout_marginTop="0dp"
         android:transitionName="technicianCharacter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -118,13 +117,14 @@
         android:id="@+id/popup_text"
         android:layout_width="480dp"
         android:layout_height="125dp"
-        android:layout_marginTop="32dp"
         android:background="@color/authui_colorAccent"
         android:padding="6dp"
         android:text="@string/technician_a6_popup1_txt"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/technicianImg"
-        tools:layout_editor_absoluteX="241dp"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="32dp"/>
 
 </android.support.constraint.ConstraintLayout>
