--- a/app/src/main/res/layout-sw680dp/technician_training_7.xml
+++ b/app/src/main/res/layout-sw680dp/technician_training_7.xml
@@ -9,8 +9,8 @@
 
     <ImageButton
         android:id="@+id/thought_bubble"
-        android:layout_width="161dp"
-        android:layout_height="172dp"
+        android:layout_width="127dp"
+        android:layout_height="148dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -18,11 +18,13 @@
         android:background="@drawable/tw__transparent"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/technicianImg"
-        app:layout_constraintHorizontal_bias="0.802"
+        app:layout_constraintHorizontal_bias="0.791"
         app:layout_constraintLeft_toLeftOf="@+id/technicianImg"
         app:layout_constraintRight_toRightOf="@+id/technicianImg"
         app:srcCompat="@drawable/thought_bubble"
-        />
+        tools:layout_editor_absoluteY="24dp"
+        tools:layout_editor_absoluteX="473dp"
+        android:layout_marginBottom="-1dp"/>
 
     <ImageButton
         android:id="@+id/nextBtn"
@@ -39,15 +41,16 @@
 
     <ImageView
         android:id="@+id/technicianImg"
-        android:layout_width="362dp"
-        android:layout_height="516dp"
+        android:layout_width="201dp"
+        android:layout_height="332dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:transitionName="technicianCharacter"
         app:srcCompat="@drawable/character_blue_man_technician"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="7dp"
         app:layout_constraintBottom_toTopOf="@+id/nextBtn"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteX="427dp"/>
 
     <TextView
         android:id="@+id/technician_a8_txt1"
@@ -62,7 +65,8 @@
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="114dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="64dp"/>
 
     <TextView
         android:id="@+id/technician_a8_txt2"
