--- a/app/src/main/res/layout/technician_survey.xml
+++ b/app/src/main/res/layout/technician_survey.xml
@@ -161,6 +161,15 @@
                 android:padding="8dp"
                 android:text="@string/technician_quiz_7"/>
 
+            <Spinner
+                android:id="@+id/q7_response"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:entries="@array/fsm_components"
+                android:padding="16dp"
+                tools:listitem="@layout/support_simple_spinner_dropdown_item"/>
+
             <TextView
                 android:id="@+id/q8"
                 android:layout_width="match_parent"
@@ -168,12 +177,30 @@
                 android:padding="8dp"
                 android:text="@string/technician_quiz_8"/>
 
+            <Spinner
+                android:id="@+id/q8_response"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:entries="@array/fsm_components"
+                android:padding="16dp"
+                tools:listitem="@layout/support_simple_spinner_dropdown_item"/>
+
+
             <TextView
                 android:id="@+id/q9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:text="@string/technician_quiz_9"/>
+
+            <EditText
+                android:id="@+id/q9_response"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:padding="16dp"/>
 
             <Button
                 android:id="@+id/submitBtn"
