--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,10 @@
             android:icon="@drawable/ic_work_black_24px"
             android:title="Training"/>
         <item
+            android:id="@+id/nav_tools"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Tools"/>
+        <item
             android:id="@+id/nav_map"
             android:icon="@drawable/ic_map_black_24px"
             android:title="Map"/>
@@ -16,8 +20,8 @@
             android:title="FAQ"/>
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools"/>
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Manage"/>
     </group>
 
     <!--<item android:title="Communicate">-->
